v3 Lesson 24: Superstructure state machine
Adds SuperstructureState (an enum with a constructor, an LEDPattern
field, and canGoTo — an exhaustive switch expression over legality) and
Superstructure (owns m_state, the one automatic UNHOMED->IDLE transition
in periodic(), guarded request commands, and unguarded inState-bound
motion commands). Leds is rewired to Leds(Supplier<SuperstructureState>)
and needs no other changes. RobotTeleop binds face buttons to requests
and inState(...).whileTrue(...) to motion, and keeps the D-pad's raw
elevator.goToHeight bindings as a deliberate, named bypass of canGoTo
(this lesson's opening hook: it's a real bug already sitting in the
Lesson 18 code, not a hypothetical).

Two real findings drove the port, both verified before writing prose:

- org.wpilib.command3.Command has no onlyIf/unless-style guard method
  anywhere in the package (confirmed by javap-ing every class in the
  commands3 jar, not just the Command interface). The old lesson's
  Commands.sequence(...).onlyIf(() -> allow(...)) pattern has no direct
  equivalent, so requests are hand-guarded: Command.noRequirements(
  coroutine -> { if (!allow(next)) return; m_state = next; }). Verified
  with a throwaway JavaExec harness that the guard runs exactly once, at
  schedule time, matching onlyIf's semantics closely enough to teach as
  the same idea.

- JUnit tests that touch Scheduler/Command/Mechanism fail before the
  test body runs with IllegalAccessException, because
  configureTestTasks(test) doesn't add the two --add-opens flags that
  configureSimulationTask/deploy do (jdk.internal.vm and java.lang, both
  needed by the coroutine/Continuation machinery). Fixed once in
  code/OpModeV3Robot/build.gradle's test {} block so no future lesson
  needs to rediscover it.

The old lesson's piece-driven INTAKING->HANDOFF->HOLDING->SCORING cycle
depended on Arm.hasGamePiece() from the skipped Lesson 22, so the state
set is redesigned to 4 states (UNHOMED/IDLE/INTAKING/SCORING, 